[project]
name = "ticketswap-ics"
version = "0.1.0"
description = "Convert your TicketSwap events calendar into a subscribable ICS feed"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "icalendar>=6.0.0",
    "pydantic>=2.10.0",
    "cachetools>=7.0.5",
    "posthog>=3.0.0",
]

[project.scripts]
serve = "uvicorn:main:main.app --host 0.0.0.0 --port 8000"

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
